--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <section class="skills">
         <ul>
           <h1>Skills</h1>
-          <li>Frontend Development</li>
-          <li>Java programming</li>
-          <li>Next.js</li>
-          <li>Ux/Ui</li>
+          <li><b>Frontend Development</b></li>
+          <li><b>Java programming</b></li>
+          <li><b>Next.js</b></li>
+          <li><b>Ux/Ui</b></li>
         </ul>
       </section>
 
